--- a/main-index.html
+++ b/main-index.html
@@ -10,7 +10,7 @@
     <nav>
       <ul>
         <li>Home</li>
-        <li>Portfolio</li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li>Resume</li>
         <li>Contact Me</li>
       </ul>
