--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>Mat D Graphics</title>
+  </head>
+  <body>
+    <header>
+      <h1>Mathew Dodrill</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="main-index.html">Home</a></li>
+        <li>Portfolio</a></li>
+        <li>Resume</li>
+        <li>Contact Me</li>
+      </ul>
+    </nav>
+    <main>
+    </main>
+  </body>
+</html>
