--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mat D Graphics</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
