--- a/main-index.html
+++ b/main-index.html
@@ -11,8 +11,8 @@
       <ul>
         <li>Home</li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li>Resume</li>
-        <li>Contact Me</li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
