--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
     <nav>
       <ul>
         <li><a href="main-index.html">Home</a></li>
-        <li>Portfolio</a></li>
-        <li>Resume</li>
-        <li>Contact Me</li>
+        <li>Portfolio</li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
