--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="main-index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li>Portfolio</li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="contact-me.html">Contact Me</a></li>
