--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="main-index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li>Resume</li>
         <li><a href="contact-me.html>Contact Me</a></li>
