--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li>Resume</li>
-        <li><a href="contact-me.html>Contact Me</a></li>
+        <li><a href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
