--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Resume</title>
     <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
