--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="../web-images/weblogo.png" alt="Logo">
       <h1>Mathew Dodrill</h1>
     </header>
     <nav>
