--- a/contact-me.html
+++ b/contact-me.html
@@ -13,10 +13,10 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li>Contact Me</li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
+        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+        <li><a class="nav-link" href="resume.html">Resume</a></li>
+        <li class="nav-page">Contact Me</li>
       </ul>
     </nav>
     <main>
