--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
     <nav>
       <ul>
-        <li>Home</li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact-me.html">Contact Me</a></li>
+        <li class="nav-page">Home</li>
+        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+        <li><a class="nav-link" href="resume.html">Resume</a></li>
+        <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
