--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li>Portfolio</li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact-me.html">Contact Me</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-page">Portfolio</li>
+        <li><a class="nav-page" href="resume.html">Resume</a></li>
+        <li><a class="nav-page" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
