--- a/resume.html
+++ b/resume.html
@@ -13,10 +13,10 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li>Resume</li>
-        <li><a href="contact-me.html">Contact Me</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
+        <li><a class="nav-link"href="portfolio.html">Portfolio</a></li>
+        <li class="nav-page">Resume</li>
+        <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
