--- a/contact-me.html
+++ b/contact-me.html
@@ -16,7 +16,7 @@
         <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         <li><a class="nav-link" href="resume.html">Resume</a></li>
-        <li class="nav-page">Contact Me</li>
+        <li class="nav-current">Contact Me</li>
       </ul>
     </nav>
     <main>
