--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
     <nav>
       <ul>
         <li><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-page">Portfolio</li>
-        <li><a class="nav-page" href="resume.html">Resume</a></li>
-        <li><a class="nav-page" href="contact-me.html">Contact Me</a></li>
+        <li class="nav-current">Portfolio</li>
+        <li><a class="nav-link" href="resume.html">Resume</a></li>
+        <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
     <main>
