--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link"href="portfolio.html">Portfolio</a></li>
-        <li class="nav-page">Resume</li>
+        <li class="nav-current">Resume</li>
         <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
