--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
       <ul>
-        <li class="nav-current">Home</li>
+        <li><a class="nav-current" href="index.html">Home</a></li>
         <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         <li><a class="nav-link" href="resume.html">Resume</a></li>
         <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
