--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-current">Portfolio</li>
+        <li><a class="nav-current" href="portfolio.html">Portfolio</a></li>
         <li><a class="nav-link" href="resume.html">Resume</a></li>
         <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
