--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="grid-container">
     <header>
       <img src="./web-images/weblogo.png" alt="Logo">
       <h1>Mathew Dodrill</h1>
