--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
-    <main>
+    <main class="main-box">
       <h2>About Me</h2>
       <p>This is gonna be about me</p>
     </main>
