--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <li><a class="nav-link" href="contact-me.html">Contact Me</a></li>
       </ul>
     </nav>
-    <main class="main-box">
-      <h2>About Me</h2>
-      <p>This is gonna be about me</p>
+    <main>
+      <div class="main-box">
+        <h2>About Me</h2>
+        <p>This is gonna be about me</p>
+      </div>
     </main>
   </body>
 </html>
