--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
       <h2>About Me</h2>
-      <p>This is gonna be about me</p>
+      <p>Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
     </main>
   </body>
 </html>
