--- a/contact-me.html
+++ b/contact-me.html
@@ -20,6 +20,9 @@
       </ul>
     </nav>
     <main>
+      <h2>Contact Info</h2>
+      <p>E-mail: mat.d.graphics@gmail.com</p>
+      <p>Instagram: @mat.d.graphics</p>
     </main>
   </body>
 </html>
