--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,27 @@
       </ul>
     </nav>
     <main>
+      <h2>Mathew Dodrill</h2>
+        <h3>Experience</h3>
+          <p>Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</p>
+          <p>Designed the logo for Kloz 4 Kidz, a non-profit organization that gives clothes to families who can't afford it.</p>
+          <p>Wrote and illustrated an original children's novel called The Search for Salem's Mom.</p>
+        <h3>Skills</h3>
+          <ul>
+            <li>Adobe Illustrator</li>
+            <li>Photoshop</li>
+            <li>InDesign</li>
+            <li>Microsoft Word</li>
+            <li>PowerPoint</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+        <h3>Education</h3>
+          <p>Associates of Arts and Science (Everett Community College)</p>
+          <p>Certificate of Graphic Design (Everett Community College)</p>
+        <h3>Work History</h3>
+          <p>Vector Marketing: Oct 2017-Jan 2018</p>
+          <p>Target: August 2018-Present</p>
     </main>
   </body>
 </html>
