--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,11 @@
     <main>
       <h2>Mathew Dodrill</h2>
         <h3>Experience</h3>
-          <p>Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</p>
-          <p>Designed the logo for Kloz 4 Kidz, a non-profit organization that gives clothes to families who can't afford it.</p>
-          <p>Wrote and illustrated an original children's novel called The Search for Salem's Mom.</p>
+          <ul>
+            <li>Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</li>
+            <li>Designed the logo for Kloz 4 Kidz, a non-profit organization that gives clothes to families who can't afford it.</li>
+            <li>Wrote and illustrated an original children's novel called The Search for Salem's Mom.</li>
+          </ul>
         <h3>Skills</h3>
           <ul>
             <li>Adobe Illustrator</li>
@@ -36,11 +38,13 @@
             <li>CSS</li>
           </ul>
         <h3>Education</h3>
-          <p>Associates of Arts and Science (Everett Community College)</p>
-          <p>Certificate of Graphic Design (Everett Community College)</p>
+          <p>Associates of Arts and Science</p>
+          <p>Certificate of Graphic Design</p>
         <h3>Work History</h3>
-          <p>Vector Marketing: Oct 2017-Jan 2018</p>
-          <p>Target: August 2018-Present</p>
+          <ul>
+            <li>Vector Marketing: Oct 2017-Jan 2018</li>
+            <li>Target: August 2018-Present</li>
+          </ul>
     </main>
   </body>
 </html>
