--- a/resume.html
+++ b/resume.html
@@ -22,13 +22,13 @@
     <main>
       <h2>Mathew Dodrill</h2>
         <h3>Experience</h3>
-          <ul>
+          <ul class="resume-list">
             <li>Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</li>
             <li>Designed the logo for Kloz 4 Kidz, a non-profit organization that gives clothes to families who can't afford it.</li>
             <li>Wrote and illustrated an original children's novel called The Search for Salem's Mom.</li>
           </ul>
         <h3>Skills</h3>
-          <ul>
+          <ul class="resume-list">
             <li>Adobe Illustrator</li>
             <li>Photoshop</li>
             <li>InDesign</li>
@@ -41,7 +41,7 @@
           <p>Associates of Arts and Science</p>
           <p>Certificate of Graphic Design</p>
         <h3>Work History</h3>
-          <ul>
+          <ul class="resume-list">
             <li>Vector Marketing: Oct 2017-Jan 2018</li>
             <li>Target: August 2018-Present</li>
           </ul>
