--- a/resume.html
+++ b/resume.html
@@ -22,28 +22,28 @@
     <main>
       <h2>Mathew Dodrill</h2>
         <h3>Experience</h3>
-          <ul class="resume-list">
-            <li>Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</li>
-            <li>Designed the logo for Kloz 4 Kidz, a non-profit organization that gives clothes to families who can't afford it.</li>
-            <li>Wrote and illustrated an original children's novel called The Search for Salem's Mom.</li>
+          <ul>
+            <li class="resume-list">Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</li>
+            <li class="resume-list">Designed the logo for Kloz 4 Kidz, a non-profit organization that gives clothes to families who can't afford it.</li>
+            <li class="resume-list">Wrote and illustrated an original children's novel called The Search for Salem's Mom.</li>
           </ul>
         <h3>Skills</h3>
-          <ul class="resume-list">
-            <li>Adobe Illustrator</li>
-            <li>Photoshop</li>
-            <li>InDesign</li>
-            <li>Microsoft Word</li>
-            <li>PowerPoint</li>
-            <li>HTML</li>
-            <li>CSS</li>
+          <ul>
+            <li class="resume-list">Adobe Illustrator</li>
+            <li class="resume-list">Photoshop</li>
+            <li class="resume-list">InDesign</li>
+            <li class="resume-list">Microsoft Word</li>
+            <li class="resume-list">PowerPoint</li>
+            <li class="resume-list">HTML</li>
+            <li class="resume-list">CSS</li>
           </ul>
         <h3>Education</h3>
           <p>Associates of Arts and Science</p>
           <p>Certificate of Graphic Design</p>
         <h3>Work History</h3>
-          <ul class="resume-list">
-            <li>Vector Marketing: Oct 2017-Jan 2018</li>
-            <li>Target: August 2018-Present</li>
+          <ul>
+            <li class="resume-list">Vector Marketing: Oct 2017-Jan 2018</li>
+            <li class="resume-list">Target: August 2018-Present</li>
           </ul>
     </main>
   </body>
