--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,7 @@
       </ul>
     </nav>
     <main>
+      <h2>Resume</h2>
       <h3>Experience</h3>
         <ul>
           <li class="resume-list">Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</li>
@@ -37,8 +38,12 @@
           <li class="resume-list">CSS</li>
         </ul>
       <h3>Education</h3>
-        <p>Associates of Arts and Science</p>
-        <p>Certificate of Graphic Design</p>
+        <dl>
+          <dt>Associates of Arts & Sciences</dt>
+          <dd>Everett Community College</dd>
+          <dt>Certificate of Graphic Design</dt>
+          <dd>Everett Community College</dd>
+        </dl>
       <h3>Work History</h3>
         <ul>
           <li class="resume-list">Vector Marketing: Oct 2017-Jan 2018</li>
