--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
     <main>
-      <h2>Resume</h2>
+      <h2 style="padding-bottom: 3em;">Resume</h2>
       <h3>Experience</h3>
         <ul>
           <li class="resume-list">Created the logo and assisted in the brand indentity for makeup artist, Isabelle Mahealani.</li>
