--- a/resume.html
+++ b/resume.html
@@ -39,9 +39,9 @@
         </ul>
       <h3>Education</h3>
         <dl>
-          <dt>Associates of Arts & Sciences</dt>
+          <dt style="list-style-type: circle;">Associates of Arts & Sciences</dt>
           <dd>Everett Community College</dd>
-          <dt>Certificate of Graphic Design</dt>
+          <dt style="list-style-type: circle;">Certificate of Graphic Design</dt>
           <dd>Everett Community College</dd>
         </dl>
       <h3>Work History</h3>
