--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </nav>
     <main>
       <h2>About Me</h2>
+      <img src="imagejpeg_0(1)~2.jpg" alt="My face">
       <p>Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
     </main>
   </body>
