--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </nav>
     <main>
       <h2>About Me</h2>
-      <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face">
+      <div class="me">
+        <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face">
+      </div>
       <p>Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
     </main>
   </body>
