--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,9 @@
   </head>
   <body class="grid-container">
     <header>
-      <img src="./web-images/weblogo.png" alt="Logo">
+      <div class="logo">
+        <img src="./web-images/weblogo.png" alt="Logo">
+      </div>
       <h1>Mathew Dodrill</h1>
     </header>
     <nav>
