--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body class="grid-container">
     <header>
-      <div class="logo">
-        <img src="./web-images/weblogo.png" alt="Logo">
-      </div>
+      <img src="./web-images/weblogo.png" alt="Logo" class="logo">
       <h1>Mathew Dodrill</h1>
     </header>
     <nav>
@@ -23,9 +21,7 @@
     </nav>
     <main>
       <h2>About Me</h2>
-      <div class="me">
-        <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face">
-      </div>
+      <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face" class="me">
       <p>Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
     </main>
   </body>
