--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,7 @@
   </head>
   <body class="grid-container">
     <header>
-      <div class="logo">
-        <img src="./web-images/weblogo.png" alt="Logo">
-      </div>
+      <img src="./web-images/weblogo.png" alt="Logo" class="logo">
       <h1>Mathew Dodrill</h1>
     </header>
     <nav>
