--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <h2>About Me</h2>
       <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face" class="me">
-      <p>Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
+      <p class="main-content">Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
     </main>
   </body>
 </html>
