--- a/resume.html
+++ b/resume.html
@@ -40,9 +40,9 @@
       <h3>Education</h3>
         <dl>
           <dt style="list-style-type: circle;">Associates of Arts & Sciences</dt>
-          <dd>Everett Community College</dd>
+          <dd>(Everett Community College)</dd>
           <dt style="list-style-type: circle;">Certificate of Graphic Design</dt>
-          <dd>Everett Community College</dd>
+          <dd>(Everett Community College)</dd>
         </dl>
       <h3>Work History</h3>
         <ul>
