--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       </ul>
     </nav>
     <main>
-      <h2>About Me</h2>
-      <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face" class="me">
-      <p>Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
+      <div class="about-me-grid">
+        <h2>About Me</h2>
+        <img src="./web-images/imagejpeg_0(1)~2.jpg" alt="My face" class="me">
+        <p class="main-content">Hey, I'm Mat! I'm a graphic designer from the greater seattle area.</p>
+      </div>
     </main>
   </body>
 </html>
